ECM-2676: UI issue in JCR FE detailed view, when column names are too long

--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
@@ -140,7 +140,7 @@
 .UIJCRExplorerPortlet .UIListGrid .ResizeColumn {
 	border-right: 1px solid #b7b7b7; 
 	height: 19px; 
-	margin: 0px 440px 0px 30px;
+	margin: 0px 520px 0px 30px;
 	padding-left: 5px;
 }
 
@@ -264,7 +264,7 @@
 .UIJCRExplorerPortlet .UIThumbnailsView .ActionIconBox {
   width: 90px;
   float: left;
-  margin: 10px 3px 5px 3px;
+  margin: 5px;
   height: 110px;
 }
 
