--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/MacStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/MacStylesheet.css
@@ -115,7 +115,7 @@
 .UIJCRExplorerPortlet .UIListGrid .ResizeColumn {
 	border-right: 1px solid #b7b7b7; 
 	height: 19px; 
-	margin: 0px 440px 0px 30px;
+	margin: 0px 520px 0px 30px;
 	padding-left: 5px;
 }
 
@@ -223,7 +223,7 @@
 .UIJCRExplorerPortlet .UIThumbnailsView .ActionIconBox {
   width: 100px;
   float: left;
-  margin: 10px 3px 5px 3px;
+  margin: 5px;
   height: 110px;
 }
 
