--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/VistaStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/VistaStylesheet.css
@@ -105,7 +105,7 @@
 .UIJCRExplorerPortlet .UIListGrid .ResizeColumn {
 	border-right: 1px solid #b7b7b7; 
 	height: 19px; 
-	margin: 0px 440px 0px 30px;
+	margin: 0px 520px 0px 30px;
 	padding-left: 5px;
 }
 
@@ -199,11 +199,11 @@
   padding-left: 10px;
 }
 
-.UIJCRExplorerPortlet .UIThumbnailsView .ActionIconBox{
+.UIJCRExplorerPortlet .UIThumbnailsView .ActionIconBox {
   width: 130px;
   float: left;
   height: 130px;
-  margin: 10px 5px;
+  margin: 5px;
 }
 
 .UIJCRExplorerPortlet .UIThumbnailsView .ActionIconBox .LeftActionIconContainer{
